# linux-asr-voicetype

./: .gitignore  LICENSE  README.md  README_ZH.md  RUN_MINIMAL.md  install.sh  progress.md  pyproject.toml
assets/openvino_minitool/: README.md
benchmarks/: README.md  bench_onnx_folder.py  bench_openvino_minitool_style.py  bench_openvino_qwen3_asr.py  bench_py_qwen3_asr_cpp.py  bench_qwen3_gguf_transcribe.py  bench_qwen_c_transcribe.py  bench_transcribe.py
docs/: FRONTEND_PROTOCOL.md
examples/: hotwords.txt
frontend/fcitx4-addon/: CMakeLists.txt  fcitx-voicetype.conf  fcitx-voicetype.config  fcitx-voicetype.desc  voicetype_fcitx4.c
frontend/fcitx5-addon/: CMakeLists.txt  qfinput-addon.conf.in  qfinput.cpp  voicetype-addon.conf.in  voicetype.cpp
scripts/: download_hf_model.sh  generate_prompt_template.py  install_controller_systemd.sh  install_infer_systemd.sh  start_asr_manager_ui.sh  start_asr_openvino.sh  start_asr_transformers.sh  start_controller_ui.sh  start_infer_service.sh  uninstall_user_services.sh
src/qwen_fcitx5_input/: asr_backend.py  cli.py  hotwords.py  recorder.py  schema.py  server.py
src/voicetype/: asr_backend.py  asr_manager_ui.py  asr_types.py  audio.py  cli.py  config.py  controller_ui.py  fcitx_bridge.py  hotwords.py  model_downloader.py  processor_numpy.py  recorder.py  schema.py  server.py  session_manager.py  ui_page.py
src/voicetype/inference/: __init__.py  openvino_backend.py  transformers_backend.py
systemd/: asr-manager-ui.service  asr-openvino.service  asr-transformers.service  qfinput.service  voicetype-ui.service  voicetype.service
