[project]
name = "voicetype"
version = "0.1.0"
description = "Independent fcitx5 + Python Qwen3-ASR input stack"
readme = "README.md"
authors = [{ name = "ansewuLJ", email = "ansewuLJ@users.noreply.github.com" }]
requires-python = ">=3.11"

# 基础依赖：控制机和推理机都需要
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "typer>=0.16.0",
  "httpx>=0.28.0",
  "numpy>=2.1.0",
  "huggingface-hub>=0.36.0",
]

[project.optional-dependencies]
# 控制机依赖：全局热键（X11）
controller = [
  "pynput>=1.7.7",
]

# 推理机依赖：ASR 推理引擎
infer = [
  "openvino>=2025.4.0",
  "qwen-asr>=0.0.6",
  "torch>=2.8.0",
  "transformers>=4.56.0",
  "tokenizers>=0.21.0",
]

[project.scripts]
voicetype = "voicetype.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
